--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "private": false,
   "dependencies": {
+    "express": "^4.16.2",
     "mongo-db": "^1.0.2",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1"
